load("//bazel:macros.bzl", "cg_java_binary", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_binary(
    name = "spaxel",
    srcs = [
        "DisplayRunner.java",
        "Game.java",
        "UpdateRunner.java",
    ],
    main_class = "spaxel.Game",
    resource_jars = [
        "//games/spaxel/resources/java:resources",
    ],
    runtime_deps = [
        "@maven//:org_lwjgl_lwjgl_glfw_natives_linux",
        "@maven//:org_lwjgl_lwjgl_natives_linux",
        "@maven//:org_lwjgl_lwjgl_opengl_natives_linux",
    ],
    deps = [
        ":constants",
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/ui",
        "//games/spaxel/src/java/spaxel/engine",
        "//games/spaxel/src/java/spaxel/resources",
        "//games/spaxel/src/java/spaxel/system",
        "//games/spaxel/src/java/spaxel/ui:ui_type",
        "//games/spaxel/src/java/spaxel/ui/controllers",
        "//games/spaxel/src/java/spaxel/util:gl_util",
        "@maven//:org_lwjgl_lwjgl",
        "@maven//:org_lwjgl_lwjgl_glfw",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)

cg_java_library(
    name = "constants",
    srcs = ["Constants.java"],
)
