load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "ui",
    srcs = ["UI.java"],
    deps = [
        "//engines/voide/src/java/voide/debug",
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/render/buffer",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/ui/elements",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
