load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "engine",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/entity",
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/logger",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/sound",
        "//engines/voide/src/java/voide/ui",
        "//games/spaxel/src/java/spaxel/sound",
        "//games/spaxel/src/java/spaxel/state",
        "//games/spaxel/src/java/spaxel/ui:ui_type",
    ],
)

filegroup(
    name = "files",
    srcs = glob(["*.java"]),
)
