load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "entity",
    srcs = glob(["**/*.java"]),
    deps = [
        "//engines/voide/src/java/voide/collision",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src/java/spaxel:constants",
        "//games/spaxel/src/java/spaxel/graphics/buffer:render_job",
        "//games/spaxel/src/java/spaxel/graphics/buffer:render_layer",
        "//games/spaxel/src/java/spaxel/graphics/texture",
        "//games/spaxel/src/java/spaxel/graphics/texture:renderable",
        "//games/spaxel/src/java/spaxel/input",
        "//games/spaxel/src/java/spaxel/util:spaxel_random",
        "//games/spaxel/src/java/spaxel/util:sprite_data_util",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)

filegroup(
    name = "files",
    srcs = glob(["**/*.java"]),
)
