load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "loaders",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/collision",
        "//engines/voide/src/java/voide/graphics/animation",
        "//engines/voide/src/java/voide/sound",
        "//games/spaxel/src/java/spaxel/engine:item_catalogue",
        "//games/spaxel/src/java/spaxel/factories/entities",
        "//games/spaxel/src/java/spaxel/graphics/texture",
        "//games/spaxel/src/java/spaxel/input",
        "//games/spaxel/src/java/spaxel/ui/elements:ui",
        "//games/spaxel/src/java/spaxel/ui/elements:ui_type",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
    ],
)
