load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "music_list",
    srcs = ["MusicList.java"],
    deps = [
        "//engines/voide/src/java/voide/sound",
        "//games/spaxel/src/java/spaxel/engine:gamestate",
        "//games/spaxel/src/java/spaxel/util:spaxel_random",
    ],
)
