load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "system",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/entity",
        "//engines/voide/src/java/voide/graphics/renderable",
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/random",
        "//engines/voide/src/java/voide/render",
        "//engines/voide/src/java/voide/render/buffer",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/sound",
        "//games/spaxel/src/java/spaxel:constants",
        "//games/spaxel/src/java/spaxel/engine",
        "//games/spaxel/src/java/spaxel/entity",
        "//games/spaxel/src/java/spaxel/resources",
    ],
)
