load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "debug_renderer",
    srcs = [
        "DebugRenderer.java",
    ],
    deps = [
        "//engines/voide/src/java/voide/graphics/renderable",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/render",
        "//games/spaxel/src/java/spaxel:constants",
        "//games/spaxel/src/java/spaxel/engine",
        "//games/spaxel/src/java/spaxel/engine:resources",
        "//games/spaxel/src/java/spaxel/entity",
        "//games/spaxel/src/java/spaxel/graphics/buffer:master_buffer",
        "//games/spaxel/src/java/spaxel/graphics/buffer:render_layer",
        "//games/spaxel/src/java/spaxel/logger",
        "//games/spaxel/src/java/spaxel/system",
        "//games/spaxel/src/java/spaxel/ui/elements:element",
    ],
)

cg_java_library(
    name = "texture_util",
    srcs = [
        "TextureUtil.java",
    ],
    deps = [
        "//engines/voide/src/java/voide/buffer:buffer_utils",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)

cg_java_library(
    name = "gl_util",
    srcs = [
        "GLUtil.java",
    ],
    deps = [
        "//games/spaxel/src/java/spaxel:constants",
        "@maven//:org_lwjgl_lwjgl",
        "@maven//:org_lwjgl_lwjgl_glfw",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)

cg_java_library(
    name = "spaxel_random",
    srcs = [
        "SpaxelRandom.java",
    ],
)

cg_java_library(
    name = "matrix_util",
    srcs = [
        "MatrixUtil.java",
    ],
    deps = [
        "//engines/voide/src/java/voide/math",
    ],
)

cg_java_library(
    name = "shader_utils",
    srcs = [
        "ShaderUtils.java",
    ],
    deps = [
        ":file_to_string_loader",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)

cg_java_library(
    name = "file_to_string_loader",
    srcs = [
        "FileToStringLoader.java",
    ],
)

cg_java_library(
    name = "sprite_data_util",
    srcs = [
        "SpriteDataUtil.java",
    ],
    deps = [
        ":spaxel_random",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src/java/spaxel/graphics/texture",
        "//games/spaxel/src/java/spaxel/graphics/texture:texture_part",
    ],
)
