load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "debug_renderer",
    srcs = [
        "DebugRenderer.java",
    ],
    deps = [
        "//engines/voide/src/java/voide/graphics/renderable",
        "//engines/voide/src/java/voide/logger",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/render/buffer",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/ui/elements",
        "//games/spaxel/src/java/spaxel:constants",
        "//games/spaxel/src/java/spaxel/engine",
        "//games/spaxel/src/java/spaxel/entity",
        "//games/spaxel/src/java/spaxel/system",
    ],
)

cg_java_library(
    name = "gl_util",
    srcs = [
        "GLUtil.java",
    ],
    deps = [
        "//games/spaxel/src/java/spaxel:constants",
        "@maven//:org_lwjgl_lwjgl",
        "@maven//:org_lwjgl_lwjgl_glfw",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)
