load("//bazel:macros.bzl", "cg_java_binary", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_binary(
    name = "spaxel",
    srcs = [
        "DisplayRunner.java",
        "Game.java",
        "UpdateRunner.java",
    ],
    main_class = "spaxel.Game",
    runtime_deps = [
        "//games/spaxel/src/main/resources:resources",
        "@maven//:org_lwjgl_lwjgl_glfw_natives_linux",
        "@maven//:org_lwjgl_lwjgl_natives_linux",
        "@maven//:org_lwjgl_lwjgl_opengl_natives_linux",
    ],
    deps = [
        ":constants",
        "//engines/voide/src/main/java/voide/input",
        "//engines/voide/src/main/java/voide/resources",
        "//engines/voide/src/main/java/voide/ui",
        "//games/spaxel/src/main/java/spaxel/engine",
        "//games/spaxel/src/main/java/spaxel/resources",
        "//games/spaxel/src/main/java/spaxel/system",
        "//games/spaxel/src/main/java/spaxel/ui:ui_type",
        "//games/spaxel/src/main/java/spaxel/ui/controllers",
        "//games/spaxel/src/main/java/spaxel/util:gl_util",
        "@maven//:org_lwjgl_lwjgl",
        "@maven//:org_lwjgl_lwjgl_glfw",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)

cg_java_library(
    name = "constants",
    srcs = ["Constants.java"],
)
