load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "animation",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/graphics/renderable",
        "//engines/voide/src/java/voide/render:render_job",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
