load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "load",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/graphics/renderable",
        "//engines/voide/src/java/voide/graphics/util:texture_util",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/resources",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
