load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "renderable",
    srcs = ["Renderable.java"],
    deps = [
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/render:render_job",
    ],
)
