load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "renderable",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/debug",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/render/buffer",
        "//engines/voide/src/java/voide/resources",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
