load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//visibility:public"])

cg_java_library(
    name = "image_pack",
    srcs = [
        "ImageNode.java",
        "ImagePacker.java",
    ],
    deps = [
        "//engines/voide/src/java/voide/graphics/load",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/resources",
    ],
)

cg_java_library(
    name = "texture_util",
    srcs = ["TextureUtil.java"],
    deps = [
        "//engines/voide/src/java/voide/buffer:buffer_utils",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)
